# DeepLearningDeployment

./: .gitignore  CMakeLists.txt  README.md
MNIST/: CMakeLists.txt  README.md  infer_tensorrt_onnx.py  logging.conf  networks.py  onnx_export_trtEngine.py  pytorch_export_onnx.py  test.py  train.py
MNIST/logs/: inferenceLog.log.2024-10-07  rootLog.log.2024-10-07  trainLog.log.2024-10-07
MNIST/models/: model_mnist.onnx  model_mnist_Engine.trt
MNIST/models/checkpoints/: epoch_1_ckp.pth  epoch_2_ckp.pth  iteration_0_ckp.pth  iteration_100_ckp.pth  iteration_200_ckp.pth  iteration_300_ckp.pth  iteration_400_ckp.pth  iteration_500_ckp.pth  iteration_600_ckp.pth  iteration_700_ckp.pth  iteration_800_ckp.pth  iteration_900_ckp.pth  last_ckp.pth
SISR/: demo.py  validate.py
TensorRT/: README.md
TensorRT/CUDA_DriverAPI/: 00_cuinit.cpp  01_checkDeviceError.cpp  02_checkDeviceErrorAdvanced.cpp  03_deviceContext.cpp  04_memoryAlloc.cpp  CMakeLists.txt
TensorRT/CUDA_RuntimeAPI/: 00_checkDeviceError.cpp  01_memoryAlloc.cpp  02_asyncStream.cpp  03_kernel.cu  03_kernelFunction.cpp  04_sharedMemory.cpp  04_sharedMemory.cu  05_warpAffine.cpp  06_cudaError.cpp  06_cudaError.cu  06_cudaError.cuh  CMakeLists.txt
TensorRT/TensorRT_Advanced/: CMakeLists.txt
TensorRT/TensorRT_Basic/: 00_basicTensorRT.cpp  01_inferEngine.cpp  02_dynamicShape.cpp  02_dynamicShape.py  03_create_onnx.py  03_edit_onnx.py  03_gen_onnx_pytorch.py  03_read_onnx.py  04_export_onnx.py  05_onnxParse.cpp  06_gen_onnx_plugin.py  06_pluginImpl.cpp  07_gen_onnx.py  07_int8_quantization.cpp  CMakeLists.txt
